--- a/infra/kubernetes/posts-depl.yaml
+++ b/infra/kubernetes/posts-depl.yaml
@@ -14,4 +14,4 @@ spec:
     spec: 
       containers:
         - name: posts
-          image: tylerposts:0.0.5
+          image: tylerg509/tylerposts:latest
