--- a/infra/kubernetes/event-bus-depl.yaml
+++ b/infra/kubernetes/event-bus-depl.yaml
@@ -15,3 +15,19 @@ spec:
       containers:
         - name: event-bus
           image: tylerg509/tyler-event-bus:latest
+
+---
+apiVersion: v1
+kind: Service
+metadata: 
+  name: event-bus-srv
+spec: 
+  type: ClusterIP
+  selector:
+    app: event-bus
+  ports: 
+    - name: event-bus
+      protocol: TCP
+      port: 4005
+      targetPort: 4005
+
