--- a/infra/kubernetes/posts-depl.yaml
+++ b/infra/kubernetes/posts-depl.yaml
@@ -15,3 +15,21 @@ spec:
       containers:
         - name: posts
           image: tylerg509/tylerposts:latest
+
+
+---
+apiVersion: v1
+kind: Service
+metadata: 
+  name: posts-clusterip-srv
+spec: 
+  type: ClusterIP
+  selector:
+    app: posts
+  ports: 
+    - name: posts
+      protocol: TCP
+      port: 4000
+      targetPort: 4000
+
+
