Handle testing of client app deployed in kubernetes

--- a/infra/kubernetes/posts-depl.yaml
+++ b/infra/kubernetes/posts-depl.yaml
@@ -14,7 +14,7 @@ spec:
     spec: 
       containers:
         - name: posts
-          image: tylerg509/tylerposts:latest
+          image: tylerg509/posts:latest
 
 
 ---
